--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -4,7 +4,7 @@
     <li>{{name}}</li>
     <img src="{{images.[1].url}}" alt="">
     <div>
-      <a href="/albums/:id">View Albums</a>
+      <a href="/albums/{{id}}">View Albums</a>
     </div>
  
 {{/each}}
